jetty: supports jetty 12 fix #3083