@@ -7,19 +7,22 @@ package io.jooby.internal.jetty;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.file.Files;
 import java.nio.file.Path;
 
-import org.eclipse.jetty.server.MultiPartFormInputStream;
+import org.eclipse.jetty.http.HttpHeader;
+import org.eclipse.jetty.http.MultiPart;
+import org.eclipse.jetty.io.Content;
 
 import edu.umd.cs.findbugs.annotations.NonNull;
 import io.jooby.FileUpload;
 import io.jooby.SneakyThrows;
 
 public class JettyFileUpload implements FileUpload {
-  private final MultiPartFormInputStream.MultiPart upload;
+  private final MultiPart.Part upload;
+  private final Path tmpdir;
 
-  public JettyFileUpload(MultiPartFormInputStream.MultiPart upload) {
+  public JettyFileUpload(Path tmpdir, MultiPart.Part upload) {
+    this.tmpdir = tmpdir;
     this.upload = upload;
   }
 
@@ -29,44 +32,38 @@ public class JettyFileUpload implements FileUpload {
   }
 
   @Override
-  public String getFileName() {
-    return upload.getSubmittedFileName();
+  public @NonNull String getFileName() {
+    return upload.getFileName();
   }
 
   @Override
-  public byte[] bytes() {
-    try {
-      byte[] bytes = upload.getBytes();
-      if (bytes == null) {
-        return Files.readAllBytes(upload.getFile().toPath());
-      }
-      return bytes;
+  public @NonNull byte[] bytes() {
+    try (var in = stream()) {
+      return in.readAllBytes();
     } catch (IOException x) {
       throw SneakyThrows.propagate(x);
     }
   }
 
   @Override
-  public InputStream stream() {
-    try {
-      return upload.getInputStream();
-    } catch (IOException x) {
-      throw SneakyThrows.propagate(x);
-    }
+  public @NonNull InputStream stream() {
+    return Content.Source.asInputStream(upload.getContentSource());
   }
 
   @Override
   public String getContentType() {
-    return upload.getContentType();
+    return upload.getHeaders().get(HttpHeader.CONTENT_TYPE);
   }
 
   @Override
-  public Path path() {
+  public @NonNull Path path() {
     try {
-      if (upload.getFile() == null) {
-        upload.write("jetty" + System.currentTimeMillis() + ".tmp");
+      if (upload instanceof MultiPart.PathPart pathPart) {
+        return pathPart.getPath();
       }
-      return upload.getFile().toPath();
+      var path = tmpdir.resolve("jetty" + System.currentTimeMillis() + ".tmp");
+      upload.writeTo(path);
+      return path;
     } catch (IOException x) {
       throw SneakyThrows.propagate(x);
     }
@@ -74,17 +71,12 @@ public class JettyFileUpload implements FileUpload {
 
   @Override
   public long getFileSize() {
-    return upload.getSize();
+    return upload.getLength();
   }
 
   @Override
   public void close() {
-    try {
-      upload.cleanUp();
-      upload.delete();
-    } catch (IOException x) {
-      throw SneakyThrows.propagate(x);
-    }
+    upload.close();
   }
 
   @Override
